Fix footer image overlap

--- a/public/scss/_site_menu.scss
+++ b/public/scss/_site_menu.scss
@@ -1,5 +1,5 @@
 .site-menu {
-  background-position: bottom left 15px;
+  background-position: bottom left 8px;
   background-repeat: no-repeat;
   padding: 15px 20px;
 
